Colocado display flex

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header> -->
 
     <main>
-      <section>
+      <section class="box_filmes_series">
         <div class="filmes">
           <h1>Meus filmes</h1>
           <p>O filmes que eu mais gosto</p>
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="box_filmes_series">
         <div class="series">
           <h1>Minhas séries</h1>
           <p>As minhas séries favoritas</p>
@@ -123,7 +123,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="box_social">
         <div>
           <h1>Minhas redes</h1>
           <p>Conecte-se comigo!</p>
@@ -132,13 +132,13 @@
               <a
                 target="_blank"
                 href="https://www.linkedin.com/in/gabriel-tsei-973668229/"
-                ><img src="linkedin.png" alt="Linkedin"
+                ><img class="imgs_social" src="linkedin.png" alt="Linkedin"
               /></a>
             </li>
 
             <li>
               <a target="_blank" href="https://github.com/BielTsei"
-                ><img src="github.png" alt="GitHub"
+                ><img class="imgs_social" src="github.png" alt="GitHub"
               /></a>
             </li>
           </ul>
