--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="movie.png" />
   </head>
   <body>
-    <!--<header>
+    <header>
       <div class="foto">
         <img
           src="pexels-koolshooters-7678409.jpg"
@@ -25,7 +25,7 @@
           width="120px"
         />
       </div>
-    </header> -->
+    </header>
 
     <main>
       <section class="box_filmes_series">
