Feito animação/transição de zoom nas imagens

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
             <li>
               <a
                 target="_blank"
-                href="https://www.google.com/search?q=Vingadores%3A+Ultimato&oq=Vingadores%3A+Ultimato&aqs=chrome..69i57j69i58j69i61l2.282j0j7&sourceid=chrome&ie=UTF-8"
+                href="https://www.google.com/search?q=Velozes+%26+Furiosos+10&oq=Velozes+%26+Furiosos+10&aqs=chrome..69i57j69i61l2.392j0j7&sourceid=chrome&ie=UTF-8"
                 ><img
-                  src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/q6725aR8Zs4IwGMXzZT8aC8lh41.jpg"
-                  alt="Vingadores: Ultimato"
+                  src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/wDWAA5QApz5L5BKfFaaj8HJCAQM.jpg"
+                  alt="
+                  Velozes & Furiosos 10"
               /></a>
             </li>
 
