--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               /></a>
             </li>
 
-            <li>
+            <!--<li>
               <a
                 target="_blank"
                 href="https://www.google.com/search?q=Avatar%3A+O+Caminho+da+%C3%81gua&oq=Avatar%3A+O+Caminho+da+%C3%81gua&aqs=chrome..69i57j69i58j69i60l2.293j0j7&sourceid=chrome&ie=UTF-8"
@@ -72,7 +72,7 @@
                   src="https://www.themoviedb.org/t/p/w300_and_h450_bestv2/mbYQLLluS651W89jO7MOZcLSCUw.jpg"
                   alt="Avatar: O Caminho da Água"
               /></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
@@ -111,6 +111,7 @@
                   alt="Castle"
               /></a>
             </li>
+            <!--
             <li>
               <a
                 target="_blank"
@@ -120,6 +121,7 @@
                   alt="O Livro de Boba Fett"
               /></a>
             </li>
+            -->
           </ul>
         </div>
       </section>
@@ -146,5 +148,8 @@
         </div>
       </section>
     </main>
+    <div class="credito">
+      <p>| Programado por Gabriel Tsei |</p>
+    </div>
   </body>
 </html>
